# TheOnlyEscapeIsESC

./: .gitignore  CMakeLists.txt  Makefile  README.MD  vcpkg.json
code/: Makefile  camera.h  filesystem.h  game.cpp  game.h  game_callbacks.cpp  game_modes.h  main.cpp  mearly.cpp  mearly.h  primitive_objects.h  shader.h  solidzone.h  sound.cpp  sound.h
shaders/: fshader.glsl  vshader.glsl
src/: camera.h  game.cpp  game_callbacks.cpp  game_modes.h  main.cpp  primitive_objects.h  sound.h
